[package]
name = "js-libp2p-noise-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
libp2p-core = "0.37.0"
libp2p-noise = { version = "0.40.0" }
# libp2p-noise = { path = "/Users/marco/pl/libp2p/rust-libp2p/transports/noise" }
futures = "0.3.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"
