[package]
name = "noise-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snow = {version ="0.9.2", default-features = false, features = ["default-resolver"] }
getrandom = { version = "*", features = ["js"] }
rand_core = "*"
rand_chacha = "*"

wasm-bindgen = "0.2.84"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]